move token class, fix spacing

--- a/frontend/src/metabase/visualizations/components/ChartClickActions.css
+++ b/frontend/src/metabase/visualizations/components/ChartClickActions.css
@@ -1,21 +1,3 @@
-.token {
-  padding: 5px 14px;
-  border-radius: 100px;
-  line-height: 16px;
-}
-.token-blue {
-  color: var(--color-brand);
-  border: 1px solid color(var(--color-brand) alpha(-65%));
-}
-.token-filter {
-  padding: 2px 16px;
-  border-radius: 100px;
-  color: var(--color-accent7);
-  border: 1px solid color(var(--color-accent7) alpha(-50%));
-}
-.token-filter:hover {
-  background-color: var(--color-accent7);
-}
 .sort {
   padding: 4px 6px 4px 12px;
   border-radius: 100px;
@@ -30,5 +12,5 @@
   color: white;
 }
 .formatting-button {
-  color: color(#b8bbc3 alpha(-50%));
+  color: color(var(--color-text-light) alpha(-35%));
 }
